Folder and code changes

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,12 @@
-DB_name=ict_mentorship_db
-DB_username=root
-DB_password=
-DB_host=localhost
-DB_port=3306
+DB_name=your_database_name
+DB_username=your_database_username
+DB_password=your_database_password 
+DB_host=your_database_localhost
+DB_port=your_database_port
 DB_logging=true
 
 
 
-Admin_EMAIL=admin@example.com
-Admin_FIRST_NAME=admin_name
-Admin_PASSWORD=admin_password
-
-# Express server port
-PORT=4000
-
-EMAIL_USER=your_email_address
-EMAIL_PASS=your_email_app_password
-
-
-
-JWT_SECRET=your_jwt_secret
+ADMIN_EMAIL=admin_email
+ADMIN_FIRST_NAME=adm_name
+ADMIN_PASSWORD=admin_password
