--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-DB_name=your_database_name
-DB_username=your_database_username
-DB_password=your_database_password 
-DB_host=your_database_localhost
-DB_port=your_database_port
+DB_name=ict_metorship_db
+DB_username=root
+DB_password=
+DB_host=localhost
+DB_port=3306
 DB_logging=true
 
 
